- Add lazy attribute to picture - Fix navbar on smaller devices

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -139,10 +139,6 @@ a {
 
 @media (max-width: 710px) {
 
-    .glass-card {
-        width: 210px;
-    }
-
     .glass-content {
         padding: 0;
         font-size: 10px;
@@ -150,7 +146,11 @@ a {
 
 }
 
-@media (max-width: 395px) {
+@media (max-width: 450px) {
+
+    .glass-card {
+        width: 320px;
+    }
 
     .glass-content {
         font-size: 10px;
